tests/snapshots/parse_errors__missing_parens.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:1:13]
   │
 1 │ print ((1);
   │       ┬   ┬  
   │       ╰────── This ( is unmatched
   │           │  
   │           ╰── There should be a ) here
───╯



